Update meta tags for social media preview

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="US COVID-19 Testing Progress Tracker"
     />
+    <meta name="twitter:title" content="US COVID-19 Testing Progress">
+    <meta name="twitter:description" content="How many COVID-19 tests have U.S. states and territories administered?">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/kairstenfay/us-covid-19-testing/master/public/us-covid-19-tracking.png">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
