Update HTML meta tags for social media

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,19 @@
       name="description"
       content="US COVID-19 Testing Progress Tracker"
     />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@databae_">
+    <meta name="twitter:creator" content="@databae_">
     <meta name="twitter:title" content="US COVID-19 Testing Progress">
     <meta name="twitter:description" content="How many COVID-19 tests have U.S. states and territories administered?">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/kairstenfay/us-covid-19-testing/master/public/us-covid-19-tracking.png">
-    <meta name="twitter:card" content="summary_large_image">
+
+    <meta property="og:title" content="US COVID-19 Testing Progress" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://us-covid-19-tracking.netlify.com/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kairstenfay/us-covid-19-testing/master/public/us-covid-19-tracking.png" />
+    <meta property="og:description" content="How many COVID-19 tests have U.S. states and territories administered?" />
+    <meta property="og:site_name" content="COVID-19 Testing Progress" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
