Revert to using large image in meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="US COVID-19 Testing Progress Tracker"
     />
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@databae_">
     <meta name="twitter:creator" content="@databae_">
     <meta name="twitter:title" content="US COVID-19 Testing Progress">
